# pocket-ai

./: .gitignore  .gitmodules  LICENSE  README.md
engine/cl/: README.md  common.hpp  engine.hpp  kernel.hpp  platform.hpp
engine/cu/: common.hpp  common_mma.hpp  common_ptx.hpp
engine/graph/: graph.hpp  node.hpp  scheduler.hpp  tensor.hpp
engine/infer/: README.md  common.hpp  gemmlowp_common.hpp  types.hpp
engine/infer/exporter/: common.py  tflite_export.py
engine/infer/kernels/: add.hpp  add_quant.hpp  binary_common.hpp  common.hpp  conv.hpp  conv_per_channel.hpp  depthwise_conv.hpp  depthwise_conv_per_channel.hpp  dequantize.hpp  div.hpp  div_quant.hpp  fully_connected.hpp  fully_connected_per_channel.hpp  fully_connected_quant.hpp  hard_swish.hpp  hard_swish_quant.hpp  lstm.hpp  max_pooling.hpp  max_pooling_quant.hpp  mean_or_sum.hpp  mean_or_sum_quant.hpp  mul.hpp  mul_quant.hpp  pad.hpp  quantize.hpp  reshape.hpp  softmax.hpp  softmax_quant.hpp  tile.hpp  transpose_conv.hpp  transpose_conv_pre_channel.hpp
engine/infer/tools/: generate_test_data_tflite.py  generate_test_models_keras.py  generate_test_models_tinynn.py  onnx2tflite.py
engine/vk/: README.md  buffer.hpp  command_buffer.hpp  common.hpp  descriptor_pool.hpp  device.hpp  engine.hpp  instance.hpp  pipeline.hpp  shader_module.hpp  vulkan_engine.hpp
eval/cuda/: bandwidth_eval.hpp  device_query.hpp  main.cpp  main.cu  max_flops.cuh  run.sh
eval/llm/: README.md  data.py  lighteval_model.py  main_benchmark.py  main_eval.py  pipeline.py  run.sh  utils.py
eval/llm/examples/: my_set_mmlu.txt  my_set_others.txt  my_set_sub_greedy.txt  my_set_temp.txt  my_set_zh.txt
eval/llm/log/: evaluation_tracker.py  info_loggers.py
eval/llm/metrics/: __init__.py  llm_as_judge.py  metric_utils.py  metrics.py  metrics_corpus.py  metrics_sample.py  normalizations.py  stderr.py
eval/llm/tasks/: default_prompts.py  default_tasks.py  lighteval_task.py  prompt_manager.py  registry.py  requests.py
example/cl/: CMakeLists.txt  build.sh  build_win_x86.bat  cl_engine_example.cpp  test_android64_win.bat  test_android_win.bat
example/cl/kernels/: dot_product.cl  gemm.cl  gemm_mobile.cl
example/cl/opencl/: README.txt  pull_cl_lib32_win.bat  pull_cl_lib64_win.bat
example/cl/opencl/OpenCL-Headers/: README.md
example/infer/: Makefile  export_model.sh  generate_model.sh  infer_main.cpp  test_model_py.sh  tflite_cpy_demo.hpp
example/infer/models/: tf_micro_conv_test_model.int8.tflite
example/vk/: CMakeLists.txt  bmp_reader.cpp  bmp_reader.hpp  build.sh  build_win_x86.bat  comp2spv.bat  test_android_win.bat  vk_engine_example.cpp  vk_layer_settings.txt  vulkan_engine.cpp
example/vk/shaders/: engine_test.comp  engine_test.spv  gemm.comp  gemm.spv  gemm_beta.comp  gemm_v1.comp  gemm_v2.comp  mandelbrot.comp  mandelbrot.spv  matmul_tiled_fp32.comp  (+1 more)
memory/: align_alloc.hpp  allocator.hpp  blocking_queue.hpp  frame_shift_cache.hpp  huffman_encoder.hpp  ring_buffer.hpp
prof/: cpu_selector.hpp  peak_perf_detector.hpp  timer.hpp
script/: obfuscator_a.sh
signal/: rfft.hpp
signal/kissfft/: README.md  kiss_fft.h  kiss_fft_c.h  kiss_fftr_c.h
tests/: CMakeLists.txt  build.sh  build_win_x86.bat
tests/engine/graph/: graph_test.cpp
tests/memory/: align_alloc_test.cpp  allocator_test.cpp  blocking_queue_test.cpp  frame_shift_cache_test.cpp  huffman_encoder_test.cpp  ring_buffer_test.cpp
tests/signal/: rfft.cpp
tests/thread/: internal_thread_test.cpp  thread_pool_test.cpp
thread/: internal_thread.hpp  thread_pool.hpp
util/: basic_marco.hpp  bmp_reader.hpp  logger.hpp  type.hpp
(+47 files in other folders)
